Tex align fix on project description

--- a/src/App.css
+++ b/src/App.css
@@ -351,6 +351,13 @@ li:nth-child(-n +3) a{
   letter-spacing: 1px;
 }
 
+.description-box{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+
 .project-description{
   font-family: 'Base Medium';
   font-size: 13px;
